--- a/api/package.json
+++ b/api/package.json
@@ -33,5 +33,10 @@
     "url": "git://github.com/luiz/flashband-api.git"
   },
   "author": "luiz",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^1.21.4",
+    "supertest": "^0.13.0"
+  }
 }
