Correção do circleCI

--- a/api/package.json
+++ b/api/package.json
@@ -36,7 +36,7 @@
   },
   "author": [
     "Luiz Amorim <luiz.amorim@oncast.com.br>",
-    "Pablo Bender <pablo.bender@oncast.com.br>",
+    "Pablo Bender <pablo.bender@oncast.com.br>"
   ],
   "license": "",
   "devDependencies": {
