--- a/api/package.json
+++ b/api/package.json
@@ -41,7 +41,9 @@
   "license": "",
   "devDependencies": {
     "expect.js": "^0.3.1",
+    "jscover": "^0.2.4",
     "mocha": "^1.21.4",
+    "mocha-lcov-reporter": "0.0.1",
     "supertest": "^0.13.0"
   }
 }
