--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
   ],
   "license": "",
   "devDependencies": {
+    "coveralls": "^2.11.1",
     "expect.js": "^0.3.1",
     "jscover": "^0.2.4",
     "mocha": "^1.21.4",
