--- a/api/package.json
+++ b/api/package.json
@@ -41,7 +41,8 @@
   ],
   "license": "",
   "devDependencies": {
-    "coveralls": "^2.11.1",
+    "chai": "^1.9.1",
+    "chai-as-promised": "^4.1.1",
     "expect.js": "^0.3.1",
     "jscover": "^0.2.4",
     "mocha": "^1.21.4",
