--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,8 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "passport": "^0.2.0",
+    "passport-http-bearer": "^1.0.1",
     "q": "^1.0.1",
     "rc": "~0.5.0",
     "sails": "~0.10.4",
@@ -48,6 +50,7 @@
     "jscover": "^0.2.4",
     "mocha": "^1.21.4",
     "mocha-lcov-reporter": "0.0.1",
+    "passport": "^0.2.0",
     "sinon": "^1.10.3",
     "supertest": "^0.13.0"
   }
