--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^0.9.0",
+    "bcryptjs": "^2.0.2",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -49,7 +50,6 @@
     "jscover": "^0.2.4",
     "mocha": "^1.21.4",
     "mocha-lcov-reporter": "0.0.1",
-    "password-hash": "^1.2.2",
     "sinon": "^1.10.3",
     "supertest": "^0.13.0"
   }
