--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^0.9.0",
-    "bcryptjs": "^2.0.2",
+    "password-hash": "^1.2.2",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -21,8 +21,6 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "passport": "^0.2.0",
-    "passport-http-bearer": "^1.0.1",
     "q": "^1.0.1",
     "rc": "~0.5.0",
     "sails": "~0.10.4",
