--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,8 @@
   "keywords": [],
   "dependencies": {
     "async": "^0.9.0",
-    "password-hash": "^1.2.2",
     "ejs": "~0.8.4",
+    "glob": "^4.0.5",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -21,6 +21,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "password-hash": "^1.2.2",
     "q": "^1.0.1",
     "rc": "~0.5.0",
     "sails": "~0.10.4",
