--- a/web/.jshintrc
+++ b/web/.jshintrc
@@ -1,6 +1,5 @@
 {
   "node": true,
-  "browser": true,
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
@@ -18,6 +17,7 @@
   "strict": true,
   "trailing": true,
   "smarttabs": true,
+  "white": true,
   "globals": {
     "angular": false
   }
