--- a/web/bower.json
+++ b/web/bower.json
@@ -1,21 +1,19 @@
 {
-  "name": "flashband-web-app",
+  "name": "flashbandWebapp",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.16",
-    "json3": "~3.3.1",
-    "es5-shim": "~3.1.0",
-    "bootstrap-sass-official": "~3.2.0",
-    "angular-resource": "1.2.16",
-    "angular-cookies": "1.2.16",
-    "angular-sanitize": "1.2.16",
-    "angular-animate": "1.2.16",
-    "angular-touch": "1.2.16",
-    "angular-route": "1.2.16"
+    "modernizr": "2.8.x",
+    "angular": "1.2.x",
+    "jquery": "2.x.x",
+    "angular-animate": "1.2.x",
+    "angular-cookies": "1.2.x",
+    "angular-touch": "1.2.x",
+    "angular-sanitize": "1.2.x",
+    "restangular": "1.3.x",
+    "angular-ui-router": "0.2.x",
+    "bootstrap-sass-official": "3.2.x"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.16",
-    "angular-scenario": "1.2.16"
-  },
-  "appPath": "app"
+    "angular-mocks": "1.2.x"
+  }
 }
