--- a/web/package.json
+++ b/web/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "flashbandwebapp",
+  "name": "flashbandWebapp",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compass": "^0.7.2",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.8.3",
-    "grunt-newer": "^0.7.0",
-    "grunt-ngmin": "^0.0.3",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
-    "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.23",
+    "gulp": "^3.6.0",
+    "gulp-autoprefixer": "^0.0.6",
+    "main-bower-files": "^1.0",
+    "gulp-cache": "^0.2",
+    "gulp-rimraf": "^0.1",
+    "gulp-csso": "^0.2.6",
+    "gulp-filter": "^0.4.1",
+    "gulp-flatten": "^0.0.2",
+    "gulp-imagemin": "^0.6",
+    "gulp-jshint": "^1.8",
+    "gulp-load-plugins": "^0.5",
+    "gulp-ruby-sass": "^0.4.3",
+    "gulp-size": "^1.0",
+    "gulp-uglify": "^0.3",
+    "gulp-useref": "^0.4.2",
+    "gulp-ng-annotate": "^0.2.0",
+    "gulp-replace": "^0.4",
+    "gulp-rev": "^1.0",
+    "gulp-rev-replace": "^0.3",
+    "gulp-ng-html2js": "~0.1.6",
+    "gulp-minify-html": "~0.1.3",
+    "gulp-inject": "^1.0",
+    "jshint-stylish": "^0.4",
+    "wiredep": "^1.4.3",
+    "gulp-karma": "0.0.4",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "require-dir": "^0.1",
+    "browser-sync": "^1.3",
+    "http-proxy": "^1.1",
+    "gulp-protractor": "0.0.7",
+    "gulp-plumber": "^0.6.3",
+    "protractor": "^1.0.0",
+    "uglify-save-license": "^0.4.1",
+    "gulp-sass": "^0.7.3"
   },
   "engines": {
     "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "grunt test"
   }
 }
