--- a/web/bower.json
+++ b/web/bower.json
@@ -13,7 +13,8 @@
     "restangular": "1.4.x",
     "angular-ui-router": "0.2.x",
     "bootstrap-sass-official": "3.2.x",
-    "ng-file-upload": "~1.6.5"
+    "ng-file-upload": "~1.6.5",
+    "angular-translate": "~2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
