--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^0.9.0",
+    "csv": "^0.4.0",
     "ejs": "~0.8.4",
     "glob": "^4.0.5",
     "grunt": "0.4.2",
