--- a/web/package.json
+++ b/web/package.json
@@ -1,40 +1,43 @@
 {
   "name": "flashbandWebapp",
   "version": "0.0.0",
+  "scripts": {
+    "postinstall": "bower install"
+  },
   "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.10",
     "browser-sync": "^1.3",
     "gulp": "^3.6.0",
-    "gulp-autoprefixer": "^0.0.6",
+    "gulp-autoprefixer": "^1.0.1",
     "gulp-cache": "^0.2",
     "gulp-csso": "^0.2.6",
-    "gulp-filter": "^0.4.1",
-    "gulp-flatten": "^0.0.2",
-    "gulp-imagemin": "^0.6",
+    "gulp-filter": "^1.0.2",
+    "gulp-flatten": "0.0.3",
+    "gulp-imagemin": "^1.0.1",
     "gulp-inject": "^1.0",
     "gulp-jshint": "^1.8",
     "gulp-karma": "0.0.4",
-    "gulp-load-plugins": "^0.5",
+    "gulp-load-plugins": "^0.6.0",
     "gulp-minify-html": "~0.1.3",
-    "gulp-ng-annotate": "^0.2.0",
+    "gulp-ng-annotate": "^0.3.3",
     "gulp-ng-html2js": "~0.1.6",
     "gulp-plumber": "^0.6.3",
-    "gulp-protractor": "0.0.7",
+    "gulp-protractor": "0.0.11",
     "gulp-replace": "^0.4",
     "gulp-rev": "^1.0",
     "gulp-rev-replace": "^0.3",
     "gulp-rimraf": "^0.1",
-    "gulp-ruby-sass": "^0.4.3",
-    "gulp-sass": "^0.7.3",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^1.0.0",
     "gulp-size": "^1.0",
-    "gulp-uglify": "^0.3",
-    "gulp-useref": "^0.4.2",
+    "gulp-uglify": "^1.0.1",
+    "gulp-useref": "^1.0.2",
     "http-proxy": "^1.1",
-    "jshint-stylish": "^0.4",
+    "jshint-stylish": "^1.0.0",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "main-bower-files": "^1.0",
+    "main-bower-files": "^2.0.0",
     "phantomjs": "^1.9.7-15",
     "protractor": "^1.0.0",
     "require-dir": "^0.1",
