--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "browser-sync": "^1.3",
+    "browserstack-webdriver": "^2.41.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-cache": "^0.2",
