--- a/api/.jshintrc
+++ b/api/.jshintrc
@@ -1,45 +1,56 @@
 {
-  "browser": false,
   "node": true,
-  "jquery": false,
-  "predef": [],
-  "debug": false,
-  "devel": true,
-  "strict": false,
-  "globalstrict": false,
-  "asi": false,
-  "laxbreak": true,
+  "esnext": true,
   "bitwise": true,
-  "boss": false,
-  "curly": false,
+  "camelcase": true,
+  "curly": true,
   "eqeqeq": true,
-  "eqnull": false,
-  "evil": false,
-  "expr": false,
-  "forin": false,
   "immed": true,
+  "indent": 2,
   "latedef": true,
-  "loopfunc": false,
+  "newcap": true,
   "noarg": true,
+  "quotmark": "single",
   "regexp": true,
-  "regexdash": false,
+  "undef": true,
+  "unused": true,
+  "strict": true,
+  "trailing": true,
+  "smarttabs": true,
+  "white": true,
+  "maxcomplexity": 6,
+  "browser": false,
+  "jquery": false,
+  "devel": true,
+  "laxbreak": true,
   "scripturl": true,
-  "shadow": false,
-  "supernew": false,
-  "undef": false,
-  "newcap": false,
   "noempty": true,
   "nonew": true,
   "nomen": true,
   "onevar": false,
   "plusplus": false,
   "sub": false,
-  "trailing": true,
-  "white": false,
-  "indent": 2,
-  "camelcase": true,
-  "unused": true,
-  "maxcomplexity": 15,
-  "maxlen": 256,
-  "quotmark": true
+  "globals": {
+    "AuthenticateService": false,
+    "FlashbandService": false,
+    "FlashbandBatchImporter": false,
+    "res": false,
+    "Flashband": false,
+    "FrontdoorService": false,
+    "ShowgoerService": false,
+    "User": false,
+    "Token": false,
+    "async": false,
+    "FlashbandBatch": false,
+    "Entrance": false,
+    "describe": false,
+    "it": false,
+    "sails": false,
+    "Showgoer": false,
+    "beforeEach": false,
+    "FlashbandHelper": false,
+    "before": false,
+    "after": false,
+    "afterEach": false
+  }
 }
