--- a/api/.jshintrc
+++ b/api/.jshintrc
@@ -3,7 +3,7 @@
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
-  "curly": true,
+  "curly": false,
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
@@ -52,6 +52,7 @@
     "before": false,
     "after": false,
     "afterEach": false,
-    "ShowogerService": false
+    "ShowogerService": false,
+    "LoggerService": false
   }
 }
