should have title of page and list of showgoers

--- a/web/.jshintrc
+++ b/web/.jshintrc
@@ -29,6 +29,7 @@
     "element": false,
     "angular": false,
     "describe": false,
-    "beforeEach": false
+    "beforeEach": false,
+    "iit": false
   }
 }
