--- a/web/bower.json
+++ b/web/bower.json
@@ -15,7 +15,8 @@
     "bootstrap-sass-official": "3.2.x",
     "ng-file-upload": "~1.6.5",
     "angular-translate": "~2.3.0",
-    "angular-ui-utils": "bower-keypress"
+    "angular-ui-utils": "bower-keypress",
+    "angular-datatables": "~0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
