ShowgoerService#search: showgoers with status: associated and ever enter

--- a/api/.jshintrc
+++ b/api/.jshintrc
@@ -53,6 +53,7 @@
     "after": false,
     "afterEach": false,
     "ShowogerService": false,
-    "_": false
+    "_": false,
+    "iit": false
   }
 }
