--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,9 @@
     "rc": "~0.5.0",
     "sails": "~0.10.4",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.10.4"
+    "sails-mongo": "^0.10.4",
+    "winston": "^0.8.1",
+    "winston-mongodb": "^0.5.2"
   },
   "scripts": {
     "start": "node_modules/.bin/sails lift",
