log all actions

--- a/api/.jshintrc
+++ b/api/.jshintrc
@@ -54,6 +54,7 @@
     "afterEach": false,
     "ShowogerService": false,
     "_": false,
-    "iit": false
+    "iit": false,
+    "LoggerService": false
   }
 }
