--- a/web/bower.json
+++ b/web/bower.json
@@ -16,7 +16,9 @@
     "ng-file-upload": "~1.6.5",
     "angular-translate": "~2.3.0",
     "angular-ui-utils": "bower-keypress",
-    "angular-datatables": "~0.2.1"
+    "angular-datatables": "~0.2.1",
+    "angular-sails": "~1.0.4",
+    "sails.io.js": "~0.10.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
